src/App.css
#root {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  height: 100svh;
  margin: 0 auto;
  text-align: center;
  box-sizing: border-box;
  height: 100svh;
  overflow-x: hidden;
}

main {
  min-height: fit-content;
  height: 100%;
  width: 100%;
  display: flex;
  padding: 48px;
  gap: 12px;
}

#mascot {
  position: absolute;
  z-index: -1;
  scale: 0.6;
  rotate: 10deg;
  top: 40%;
  right: 0%;
}

#loading {
  margin: auto;
}

#catchphrase {
  align-items: center;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  letter-spacing: 0.05rem;
  font-size: 48px;
  color: white;
  filter: drop-shadow(4px 4px 4px #94949442);
}

#catchphrase-cont {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: auto;
}

